fix: avatar min-width on mobile

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -421,6 +421,7 @@ p code {
 
   @media (max-width: 720px) {
     height: 84px;
+    min-width: 84px;
     margin-left: 8px;
   }
 }
